--- a/src/App.css
+++ b/src/App.css
@@ -445,10 +445,90 @@ nav {
   gap: 5px;
 }
 
+
+.footer {
+  padding: 20px;
+  margin-top: 5vh;
+  font-family: 'Source Sans Pro', sans-serif;
+  display:flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.footer-section {
+  margin: 10px;
+}
+
+.footer-section h4 {
+  font-size: 16px;
+  color: #706c61;
+  margin-bottom: 10px;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin-bottom: 8px;
+}
+
+.footer-section ul li a {
+  color: #706c61;
+  text-decoration: none;
+}
+
+.footer-section ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom {
+  border-top: 1px solid #706c61;
+  padding-top: 10px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.footer-bottom ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 10px 0;
+}
+
+.footer-bottom ul li {
+  margin: 0 10px;
+}
+
+.footer-bottom ul li a {
+  color: #706c61;
+  text-decoration: none;
+}
+
+.footer-bottom ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer-bottom p {
+  color: #706c61;
+  margin: 5px 0;
+}
+
+
+
 @media (max-width: 1024px) {
   .projectsGrid,
   .recommendedGrid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr) !important;
   }
 
   .navGenresOverall {
@@ -487,7 +567,7 @@ nav {
 @media (max-width: 768px) {
   .projectsGrid,
   .recommendedGrid {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr !important;
   }
 
   #search {
