--- a/src/App.css
+++ b/src/App.css
@@ -606,7 +606,7 @@ nav {
     height: 200px;
   }
 }
-
+/* random to make it different
 /* Media Classes for Dynamic Layout */
 
 .media-tv .projectsGrid,
